<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_button"
    android:backgroundTint="@color/accent"
    android:padding="24dp"
    android:layout_marginVertical="8dp">

    <TextView
        android:id="@+id/time_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/main"
        android:textSize="24sp"
        android:text="@string/item_time_label"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/time"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/main"
        android:textSize="18sp"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintTop_toBottomOf="@id/time_label"
        app:layout_constraintBottom_toTopOf="@id/location_label"
        tools:text="12:23" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/main"
        android:textSize="24sp"
        android:text="@string/item_location_label"
        android:layout_marginEnd="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/update"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintBottom_toTopOf="@id/location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/main"
        android:textSize="18sp"
        tools:text="Coliba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintTop_toBottomOf="@id/location_label"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/main"
        android:textColor="@color/accent"
        android:text="@string/item_delete"
        app:layout_constraintHorizontal_weight=".4"
        app:layout_constraintStart_toEndOf="@id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/time"
        app:layout_constraintBottom_toBottomOf="@id/time_label"/>

    <Button
        android:id="@+id/update"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/main"
        android:textColor="@color/accent"
        android:text="@string/item_update"
        app:layout_constraintHorizontal_weight=".4"
        app:layout_constraintStart_toEndOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/location_label"
        app:layout_constraintBottom_toBottomOf="@id/location" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
